<resources>
    <string name="app_name">AR_TOUR</string>
    <string name="title_activity_maps">maps</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mapbox_access_token" translatable="true">pk.eyJ1Ijoia3VuYWxtb3JlIiwiYSI6ImNraWp5cXQ3NzA0c2UzMnFqcXoxNGhsYWUifQ.5Ol_J9Auu6VEtR15LRsfqg</string>

    <string name="start_nvigation">Start Nvigation</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="tile_location_permission">Location Access</string>
    <string name="ok">ok</string>
    <string name="title_location_permission">Location for permission</string>
    <string name="start_navigation">Start navigation</string>
    <string name="ar_mode">AR Mode</string>
    <string name="navigation">Navigation</string>
    <string name="explore">explore</string>

    <string name="game_view_content_description">Game view</string>
    <string name="AR_Toursim">AR-TOURSIM</string>
    <string name="card">CARD_!</string>
    <string name="place">Place</string>
    <string name="flights">Flights</string>
    <string name="trains">Trains</string>
    <string name="hotels">hotels</string>
    <string name="title_activity_bottom_navigation_bar">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maps">maps</string>
    <string name="change_profile">Change profile</string>
    <string name="verify">VERIFY</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="phone_number">Phone number</string>
    <string name="your_email_address">Your email address</string>
    <string name="your_name">Your name</string>
    <string name="logout">logout</string>
    <string name="my_trips">My Trips</string>
    <string name="trips_and_offers">Trips and offers</string>
    <string name="poi_list">POI LIST</string>
    <string name="tap_to_select_destination">tap to select destination</string>
    <string name="go">go</string>
    <string name="ar_navigation">ar navigation</string>
    <string name="vision_not_supported_message" />
    <string name="vision_not_supported_title">error</string>
    <string name="camera_calibration_progress">Camera calibration: %1$d %%</string>
    <string name="enter_station">ENTER STATION</string>
    <string name="search_flight">Search flight</string>
    <string name="flight_name">flight name</string>
    <string name="hotel_name">Hotel name</string>
    <string name="search_hotel">search hotel</string>
    <string name="train_name">train name</string>
    <string name="search_train">search train</string>
    <string name="hello_flight_fragment">flight</string>


</resources>