<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewerFragment"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/infotitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"/>




    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="7dp"
        card_view:cardCornerRadius="27dp"
        card_view:cardBackgroundColor="#654ea3"
        card_view:cardElevation="7dp"
        android:elevation="2dp"
        android:translationZ="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <TextView
                android:id="@+id/info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="info will be displayed here"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                />
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/flight_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/flight_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/flight_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_flight"
        android:gravity="center"
        android:translationZ="9dp"
        android:background="#eaafc8"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/hotel_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:text="@string/hotel_name"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/white"

        />

    <Button
        android:id="@+id/search_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_hotel"
        android:gravity="center"
        android:translationZ="9dp"
        android:background="#eaafc8"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/train_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"

        android:text="@string/train_name"
        android:gravity="center"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/train_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_train"
        android:gravity="center"
        android:translationZ="9dp"
        android:background="#eaafc8"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />

</LinearLayout>