<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/AR_Toursim"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="end"/>




    <LinearLayout
        android:id="@+id/BookingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/flights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights"
            android:textSize="13sp"
            android:textColor="#050000"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:drawableTopCompat="@drawable/ic_baseline_flight_24"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/trains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trains"
            android:textSize="13sp"
            android:textColor="#050000"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:drawableTopCompat="@drawable/ic_baseline_directions_transit_24"
            android:layout_marginStart="28dp"/>

        <TextView
            android:id="@+id/hotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotels"
            android:textSize="13sp"
            android:textColor="#050000"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:drawableTopCompat="@drawable/ic_baseline_hotel_24"
            android:layout_marginStart="28dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/CardviewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="#FFFFFF">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recylerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
</LinearLayout>