<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapsFragment">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        mapbox:mapbox_cameraTargetLat="38.9098"
        mapbox:mapbox_cameraTargetLng="-77.0295"
        mapbox:mapbox_cameraZoom="12">


    </com.mapbox.mapboxsdk.maps.MapView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_location_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:tint="@android:color/white"
        mapbox:backgroundTint="@color/colorPrimary"
        mapbox:srcCompat="@android:drawable/ic_search_category_default" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|left"
            android:layout_marginBottom="12dp"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/start_navigation"
            android:textColor="@color/design_default_color_background"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/Armode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/report_feedback_padding_16"
            android:paddingStart="@dimen/report_feedback_padding_16"
            android:text="@string/ar_mode"
            tools:ignore="RtlSymmetry" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/explore"
            android:id="@+id/explore"
            android:layout_marginStart="10dp" />
        <Button
            android:id="@+id/startAr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="start"/>

    </LinearLayout>


</FrameLayout>